--- a/WattsALoan1.csproj
+++ b/WattsALoan1.csproj
@@ -64,6 +64,12 @@
     <Compile Include="LoanAllocations.Designer.cs">
       <DependentUpon>LoanAllocations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Payments.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Payments.Designer.cs">
+      <DependentUpon>Payments.cs</DependentUpon>
+    </Compile>
     <Compile Include="WattsALoan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoanAllocations.resx">
       <DependentUpon>LoanAllocations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payments.resx">
+      <DependentUpon>Payments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
